# codeforge

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .secrets.baseline  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  accounts.json  alembic.ini  conftest.py  cosmic-ray.toml  dependency_ledger.toml  docker-compose.yml  forge.py  gitignore.txt  mkdocs.yml  pyproject.toml  render.yaml  t
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish-image.yml  scorecard.yml
benchmarks/: perf_journeys.py
blueprints/: arc.json  arc.md  zone_scheduler.json  zone_scheduler.md
blueprints/examples/: npc_combat.json  npc_combat.md
catalog/: README.md  domains.yaml  items.yaml  parts.yaml
chronicle/: README.md  ledger.jsonl
codeforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/career/: career_evidence_matrix.json
data/learning_records/: catalog-v3-identity-vs-filing-aid.json  code-learning-research-2026.json  extract-record-loader-2026.json  first-cross-repo-harvest-2026.json  holistic-code-analysis-2026.json
data/pioneer/: risk_ladder.json
deploy/terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/: AI_WORKFLOW.md  CAPTAINS_LOG.md  DEBUGGING.md  README.md  RUNNING.md  architect_brain.md  architecture.md  architecture_c4.md  blueprint_renderer.md  career_evidence_board.md  character_system.md  configuration.md  continuous_improvement.md  convergence_review.md  dashboard.md  database.md  frame_up.md  frameless_python.md  framework_decision_matrix.md  full_stack_forge_decision.md  full_stack_readiness_checklist.md  github_portfolio_checklist.md  hiring_requirement_matrix.md  human_keel_doctrine.md  index.md  job_system.md  legal_policy_awareness.md  manufacturing_demo.md  manufacturing_loop.md  mutation_testing.md  naming_glossary.md  naming_standard.md  observability.md  optimization_ethos.md  performance.md  performance_experiments.md  performance_gate.md  performance_research_map.md  pioneer_mode.md  postmortem_template.md  (+16 more)
docs/adr/: 0001-canonical-state.md  0002-derive-dont-store.md  0003-framework-free-by-design.md  0003-framework-free-not-evennia.md  0004-state-as-data.md  0005-character-sheet-view-model.md  0006-derived-stats-prototype.md  0007-repository-layout.md  0008-subnet-designations.md  0009-deployment-as-code.md
docs/classification/: CLASSIFICATION_SYSTEM.md
docs/hardware/: change-ledger.yaml  circuit-breaker.yaml  feature-flags.yaml  health-registry.yaml  plugin-registry.yaml  repository.yaml  retry-policy.yaml  sanitizer.yaml  stream-framer.yaml  test-evidence.yaml  token-bucket.yaml  typed-event-bus.yaml  validator.yaml  workflow_engine.md  workflow_engine.yaml
docs/hardware_store/: PUBLISHING.md  catalog_v3_redesign.md
docs/holodeck/: ROADMAP.md  SAFETY.md  VISION.md
docs/hubble/: research_mapping.md
docs/keel_records/: adv-evolution-guided-search.md  adv-research-translation.md  chronicle-ship-memory.md  deployment-as-code.md  encounter-telemetry.md  object-instancing.md  proactive-npcs.md  proving-ground-arch-preview.md  typed-event-frames.md
docs/nature_inspired/: research_mapping.md
docs/pioneer_experiments/: 2026-07-10-honest-gpu-split.md
docs/postmortems/: 2026-07-09-red-merge-to-main.md
docs/proving_ground/: ROADMAP.md  SAFETY.md  VISION.md
docs/python/: standards.md
docs/repo_templates/: README.md  data_science.md  full_stack.md  infrastructure.md  library_package.md
docs/reports/: 2026-07-13-chronicle-design.md  2026-07-13-lemonade-board-review.md  2026-07-14-detachment-design.md  2026-07-14-retention-design.md  2026-07-17-convergence-review-repeat.md  2026-07-24-convergence-resync.md  2026-07-24-mission-complete.md  README.md  fleet_scorecard.md
docs/research/: full_stack_python_requirements.md  github_portfolio_requirements.md  python_hiring_requirements.md
docs/runbooks/: demo-deploy-rollback.md
docs/stewardship/: research_mapping.md
e2e/: conftest.py  test_dashboard_e2e.py
lessons/: python_basics.yaml
migrations/: README  env.py
migrations/versions/: 9c4d1f6ab7e2_add_job_progress.py  a2b8f1e6c04d_add_character_coins.py  (+5 more)
parts/: accounts.py  aggression.py  ai_eval.py  ai_throttle.py  api.py  arc.py  arc_ledger.py  architect.py  assembly.py  assessment.py  asset_registry.py  bench.py  blueprint.py  blueprint_ai.py  blueprint_render.py  calibrate.py  career.py  cast.py  cast_update.py  catalog.py  change_ledger.py  character_view.py  characters.py  chat_throttle.py  chime.py  chronicle.py  circuit_breaker.py  classroom.py  cli.py  clone_scan.py  combat.py  combat_clock.py  commands.py  complexity.py  console.py  coupling.py  coverage.py  dashboard.py  db.py  dependencies.py  (+88 more)
plugins/: README.md
reports/: README.md
scripts/: doctor.py  e2e_smoke.py  evolution_demo.py  lib.sh  mud_client.py  record_demo.py  ritual.sh  ritual_down.sh  ritual_fast.sh
tests/: test_abilities.py  test_accounts.py  test_affixes.py  test_aggression.py  test_ai_eval.py  test_ai_throttle.py  test_api.py  test_arc.py  test_arc_chamber.py  test_arc_ledger.py  test_architect.py  test_architecture_c4.py  test_assembly.py  test_assessment.py  test_asset_registry.py  test_bench.py  test_blueprint.py  test_blueprint_ai.py  test_blueprint_render.py  test_bounties.py  test_bulkhead.py  test_calibrate.py  test_career.py  test_cast.py  test_cast_update.py  test_catalog.py  test_change_ledger.py  test_character_view.py  test_characters.py  test_chat_throttle.py  test_chime.py  test_chronicle.py  test_circuit_breaker.py  test_classroom.py  test_cli.py  test_clone_scan.py  test_combat.py  test_combat_clock.py  test_commands.py  test_complexity.py  (+138 more)
(+132 files in other folders)
