[project]
name = "codeforge"
version = "0.1.0"
description = "A Python-native modular MUD engine and reusable code workshop."
requires-python = ">=3.13"
dependencies = ["pyyaml", "sqlalchemy", "fastapi", "uvicorn", "websockets"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "types-PyYAML",
    "pytest",
    "pytest-cov",
    "pip-audit",
    "bandit[toml]",
    "detect-secrets",
    "cyclonedx-bom",
    "hypothesis",
    "httpx2",
]

[project.scripts]
codeforge = "parts.cli:main"
spark = "parts.cli:spark"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["parts"]
py-modules = ["forge"]

[tool.setuptools.package-data]
# The browser gate serves this page; it must ship inside the installed wheel.
parts = ["web/*.html"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E/F: core errors  I: import sorting  UP: modernize syntax
# B: common bug patterns  SIM: simplifications
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["property: Hypothesis property-based tests (run via `make property`)"]

[tool.bandit]
# Reviewed suppressions, each safe by design in this codebase:
#   B101 assert  - type-narrowing invariants for mypy, not input validation.
#   B104 bind-all - the gateway and admin API are meant to accept LAN clients.
#   B506 yaml.load - the only call site uses _UniqueKeyLoader, a SafeLoader
#                    subclass that merely adds duplicate-key rejection.
skips = ["B101", "B104", "B506"]
