[project]
name = "codeforge"
version = "0.1.0"
description = "A Python-native modular MUD engine and reusable code workshop."
requires-python = ">=3.13"
dependencies = ["pyyaml", "sqlalchemy", "fastapi", "uvicorn", "websockets", "pydantic", "structlog"]

[project.optional-dependencies]
# Optional feature extras still earn their place: the dependency gate (`make deps`) folds
# every non-dev extra into the runtime set, so `anthropic` is justified in the ledger.
ai = ["anthropic>=0.40"]
postgres = ["psycopg[binary]>=3.3.4"]
dev = [
    "ruff",
    "mypy",
    "types-PyYAML",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pip-audit",
    "bandit[toml]",
    "detect-secrets",
    "cyclonedx-bom",
    "hypothesis",
    "httpx2",
    "alembic",
    "mkdocs-material",
    "playwright",
]

[project.scripts]
codeforge = "parts.cli:main"
spark = "parts.cli:spark"

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["parts", "parts.evolution", "parts.stewardship", "parts.hubble"]
py-modules = ["forge"]

[tool.setuptools.package-data]
# The browser gate serves this page; it must ship inside the installed wheel.
parts = ["web/*.html"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E/F: core errors  I: import sorting  UP: modernize syntax
# B: common bug patterns  SIM: simplifications
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
# The typecheck scope, declared here so it is the single source of truth: the Makefile,
# any IDE, and external auditors all see the same set. `e2e/` is deliberately excluded
# (it carries a second conftest.py; a whole-tree `mypy .` would collide on the basename).
files = ["parts", "tests", "forge.py"]

# anthropic is an optional 'ai' extra (the Claude Architect brain), not installed in the
# dev/CI venv; it is lazy-imported behind the Advisor seam. Don't require its stubs here.
[[tool.mypy.overrides]]
module = "anthropic"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Fail loud on typos, not silently: an unregistered marker or an unknown config
# key is a mistake, not a warning. importlib import mode is the modern default
# (no sys.path games, no __init__.py needed in tests).
addopts = "--strict-markers --strict-config --import-mode=importlib"
# Repo root on the path so tests can import the dev-only `benchmarks/` harness
# (it is not part of the installed package, unlike `parts`/`forge`).
pythonpath = ["."]
markers = [
    "property: Hypothesis property-based tests (run via `make property`)",
    "fuzz: hostile-input fuzz tests for trust-boundary gates (run via `make fuzz`)",
]

[tool.coverage.run]
# Branch coverage, not just line: line coverage proves a line ran, branch coverage
# proves both sides of every conditional were exercised. The stricter, honest measure.
branch = true

[tool.bandit]
# Reviewed suppressions, each safe by design in this codebase:
#   B101 assert  - type-narrowing invariants for mypy, not input validation.
#   B104 bind-all - the gateway and admin API are meant to accept LAN clients.
#   B506 yaml.load - the only call site uses _UniqueKeyLoader, a SafeLoader
#                    subclass that merely adds duplicate-key rejection.
skips = ["B101", "B104", "B506"]
